syntax = "proto3";

package common;

option go_package = "github.com/subiz/header/common";

message Context {
	Credential credential = 6;

	Device by_device = 10;

	// for kafka
	string sub_topic = 11;

	// list of used fields in the object
	repeated string fields = 21;
}

message Device {
	string ip = 3;
	string user_agent = 4; // hash
	string screen_resolution = 5;
	string timezone = 6; // hash
	string language = 7;
	string referrer = 8; //hash
	string type = 9; // 0 - 1 - 2 -3
	enum DeviceType {
		unknown = 0;
		mobile = 1;
		tablet = 2;
		desktop = 3;
	}

	string platform = 10;
	string source_referrer = 11; // referrer of referrer
	repeated string ga_tracking_ids = 12;
	string page_url = 13;
	string page_title = 14;

	string ga_client_id = 15;

	string city_name = 18;            // derived from ip
	string country_name = 19;         // derived from ip
	string continent_code = 20;      // derived from ip
	float latitude = 22;             // derived from ip
	float longitude = 23;            // derived from ip
	string postal_code = 24;         // derived from ip

	string isp = 27;                 // derived from ip
	string continent_name = 28;      // derived from ip
	string country_code = 29;        // derived from ip

	string browser_name = 32;        // filled

	enum AdsNetwork {
		google_adwords = 0;
	}
	string ads_network = 33;

	enum Source {
		direct = 0;
		referring = 1;
		organic = 2;
		social = 3;
		advertising = 4;
	}
	string source = 34;

	repeated SessionCampaign campaigns = 35;
}

message By {
	Device device = 2;

	string id = 3;
	string client_id = 4;
	string type = 6; // agent, user, bot, dummy
	string display_id = 7;
	string display_type = 8; // agent, user, bot

	string profile_id = 10; // only used if type = user
	string channel = 11;
	string channel_source = 12;
}

message Credential {
	string account_id = 1;
	string issuer = 3;
	Type type = 4; // should be agent, user or connector
	// Permission perm = 6;
	string client_id = 7;
	repeated string scopes = 8;

	// for x-signed-key
	repeated string signed_objects = 9;
	string signed_type = 10;
}

enum Type {
	unknown = 0;
	user = 1;
	agent = 2;
	subiz = 3;
	app = 4; // dashboard, accmgr
	connector = 6; // fabikon, mailkon
	bot = 7; // subiz bot
	dummy = 8; // agent that cannot handle action
	workflow = 9;
}

message SessionCampaign {
	string name = 2;
	string source = 3;
	string medium = 4;
	string term = 5;
	string content = 6;
}