syntax = "proto2";

package mailkon;

import "header.proto";

option go_package = "github.com/subiz/header/mailkon";

message Address {
	optional string account_id = 1;
	optional string address = 2;
	optional int64 updated = 3;
}

message Domain {
	optional string account_id = 1;
	optional string domain = 2;
	optional int64 updated = 3;
	optional string dnstype = 4;
	optional string data = 5;
}

message Message {
	optional string message_id = 2;
	optional string account_id = 3;
	optional string conversation_id = 4;
	optional string from_addr = 5;
	optional string to_addr = 6;
	optional string subject = 7;
	optional string body = 8;
	optional string header = 9;
	repeated string attachments = 10;
	optional int64 created = 11;
}

message User {
	optional string account_id = 2;
	optional string user_id = 3;
	optional string email_address = 4;
	optional int64 seen = 5;
}

message SendgridEvent {
	optional string event_id = 3;
	optional string account_id = 4;
	optional string conversation_id = 6;
	optional string message_id = 7;
	repeated string data = 8;
	optional string full_message_id = 9;
	optional string subject = 10;
	optional header.Event event = 11;
	optional string root_message_id = 12;
}

message SendgridTrackingEvent {
	optional string email = 3;
	optional int64 timestamp = 4;
	optional string smtp_id = 5;
	optional string event = 6;
	optional string category = 7;
	optional string sg_event_id = 8;
	optional string sg_message_id = 9;
	optional string reason = 10;
	optional string status = 11;
	optional string response = 12;
	optional string attempt = 13;
	optional string type = 14;

	optional string ip = 16;
	optional string useragent = 17;
	optional string url = 18;
	optional int64 asm_group_id = 19;
}
